// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getClosestStep 1`] = `Array []`;

exports[`getClosestStep 2`] = `
Array [
  Object {
    "changes": Array [
      3,
      2,
    ],
    "name": "zoom-out",
  },
  Object {
    "changes": Array [
      77,
      89,
    ],
    "name": "zoom-in",
  },
]
`;

exports[`getClosestStep 3`] = `
Array [
  Object {
    "changes": Array [
      3,
      2,
      1,
    ],
    "name": "zoom-out",
  },
  Object {
    "changes": Array [
      9,
      77,
      89,
    ],
    "name": "zoom-in",
  },
]
`;

exports[`getClosestStep 4`] = `
Array [
  Object {
    "changes": Array [
      4,
    ],
    "name": "zoom-out",
  },
  Object {
    "changes": Array [
      3,
    ],
    "name": "zoom-in",
  },
]
`;

exports[`traveling([1,2,3,4,5,6,7], [1,2,7,4,11,6,7]) 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "bwlev": 7,
        "type": "travebasing-remove",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-remove",
      },
      Object {
        "bwlev": 11,
        "type": "travebasing-remove",
      },
    ],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 6,
        "type": "travebasing-update",
      },
      Object {
        "bwlev": 7,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 5,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 3,
        "type": "travebasing-add",
      },
    ],
    "name": "travebasing-add",
  },
]
`;

exports[`traveling([1,2,3,4,5,6,7], [1,2,7,4,11,12,7]) 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "bwlev": 7,
        "type": "travebasing-remove",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-remove",
      },
      Object {
        "bwlev": 11,
        "type": "travebasing-remove",
      },
      Object {
        "bwlev": 12,
        "type": "travebasing-remove",
      },
    ],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 7,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 6,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 5,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 3,
        "type": "travebasing-add",
      },
    ],
    "name": "travebasing-add",
  },
]
`;

exports[`traveling([1,2,3,4,5,6,7], [1,8,7]) 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "bwlev": 8,
        "type": "travebasing-remove",
      },
    ],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 7,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 6,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 5,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 3,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 2,
        "type": "travebasing-add",
      },
    ],
    "name": "travebasing-add",
  },
]
`;

exports[`traveling([1,2,3,4], [1,3,4]) 1`] = `
Array [
  Object {
    "changes": Array [],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 3,
        "type": "travebasing-update",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 2,
        "type": "travebasing-add",
      },
    ],
    "name": "travebasing-add",
  },
]
`;

exports[`traveling([1,2,3,4], [3,4]) 1`] = `
Array [
  Object {
    "changes": Array [],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 3,
        "type": "travebasing-update",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 2,
        "type": "travebasing-add",
      },
      Object {
        "bwlev": 1,
        "type": "travebasing-add",
      },
    ],
    "name": "travebasing-add",
  },
]
`;

exports[`traveling([1,2,3], [1,2,3]) 1`] = `
Array [
  Object {
    "changes": Array [],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 1,
        "type": "travebasing-update",
      },
      Object {
        "bwlev": 2,
        "type": "travebasing-update",
      },
      Object {
        "bwlev": 3,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [],
    "name": "travebasing-add",
  },
]
`;

exports[`traveling([3,4], [1,2,3,4]) 1`] = `
Array [
  Object {
    "changes": Array [
      Object {
        "bwlev": 1,
        "type": "travebasing-remove",
      },
      Object {
        "bwlev": 2,
        "type": "travebasing-remove",
      },
    ],
    "name": "travebasing-remove",
  },
  Object {
    "changes": Array [
      Object {
        "bwlev": 3,
        "type": "travebasing-update",
      },
      Object {
        "bwlev": 4,
        "type": "travebasing-update",
      },
    ],
    "name": "travebasing-update",
  },
  Object {
    "changes": Array [],
    "name": "travebasing-add",
  },
]
`;
